# SDL2andCMake

./: CMakeLists.txt  main.cpp
